@@ -126,6 +126,10 @@ gulp.task('browserify-mail-test', function() {
   return browserifyToDist('lib/test/mail-test', { exclude: 'bolt' });
 });
 
+gulp.task('browserify-regexp-test', function() {
+  return browserifyToDist('lib/test/regexp-test', { exclude: 'bolt' });
+});
+
 gulp.task('browserify-chat-test', function() {
   return browserifyToDist('lib/test/chat-test', { exclude: 'bolt' });
 });
@@ -142,6 +146,7 @@ gulp.task('browserify', ['browserify-bolt',
                          'browserify-parser-test',
                          'browserify-generator-test',
                          'browserify-mail-test',
+                         'browserify-regexp-test',
                          'browserify-chat-test',
                          'browserify-util-test',
                          'browserify-ast-test',
